[package]
name = "medieval-city-generator"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9", features = [] }
bevy_math = "0.9.1"
bevy_mod_picking = "0.11.0"
bevy_mod_raycast = "0.7.0"

# [target.'cfg(target_arch = "wasm32")'.dependencies.your_crate]
# features = ["wasm"]

[target.'cfg(target_arch = "x86_64")'.dependencies.bevy]
features = ["dynamic"]
